# eve-wrench-personal

./: .gitignore  APPLY-v0.3.5.cmd  PATCH-NOTES-v0.3.5.txt  PATCH-NOTES-v0.3.7.txt  README.md  cliff.toml  knip.json  package-lock.json  package.json  solo.yml
.github/workflows/: ci.yml  release.yml
src/: main.ts  router.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: evesettings.rs  lib.rs  updates.rs
src/components/: AccountItem.vue  BackupItem.vue  ConfirmDialog.vue  CopyPanel.vue  FormationTitleBar.test.ts  FormationTitleBar.vue  FormationVariationDialog.vue  ImportDialog.vue  ProfileCard.vue  RecoveryBar.vue  RecoveryDialog.vue  ServerSection.vue  SettingsBrowser.vue  SettingsItem.vue  TitleBar.vue  UpdateModal.vue  WindowControls.vue
src/components/ui/button/: index.ts
src/components/ui/checkbox/: Checkbox.vue
src/composables/: useCopyManager.ts  useEveRunning.ts  useI18n.ts  useWindowChrome.ts
src/lib/: backupPresentation.test.ts  backupPresentation.ts  copyGroups.ts  formationEditorUtils.test.ts  formationEditorUtils.ts  formationPresets.test.ts  formationPresets.ts  settingsSearch.test.ts  settingsSearch.ts  settingsStore.ts  targetSelection.test.ts  targetSelection.ts  utils.ts
src/locales/: en.ts  index.ts  zh.ts
src/views/: FormationEditorView.vue  MainView.vue
